[package]
name = "drv-thru"
description = "Remote Nix builds over Iroh"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.1", features = ["derive"] }
indicatif = "0.18"
iroh = { version = "1.0.0", default-features = false, features = [
  "portmapper",
  "tls-ring",
] }
iroh-tickets = "1.0.0"
postcard = { version = "1.1.3", default-features = false, features = [
  "use-std",
] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
tokio = { version = "1.52.3", features = [
  "fs",
  "io-util",
  "macros",
  "net",
  "process",
  "rt-multi-thread",
  "signal",
  "sync",
  "time",
] }
